# TraTrac

./: .gitignore  CLAUDE.md  CONFIG.md  README.md  pyproject.toml  tratrac.example.toml
docs/: check_command_scope.md  tauri_ui_spec.md
notebooks/: colab_guide.md
scripts/: dump_trj.py  plot_run.py  probe_detector.py  render_trajectories.py  render_violations.py  validate_trj.py  visualize_stabilization.py
src/tratrac/: __init__.py  cli.py  cli_postprocess.py  cli_render.py  cli_scout.py  cli_smooth.py
src/tratrac/application/: config.py  detection_mask.py  detection_observer.py  exclusion.py  kalman.py  orientation.py  orientation_kalman.py  pipeline.py  progress.py  stabilization.py  track_smoothing.py  world_projection.py
src/tratrac/calibration/: drone_specs.py  gsd.py  srt_parser.py
src/tratrac/domain/: __init__.py  detection.py  exclusion.py  frame.py  geometry.py  ports.py  progress.py  stabilization.py  timing.py  vehicle.py  world.py
src/tratrac/infrastructure/: cadence.py
src/tratrac/infrastructure/anchors/: __init__.py  manifest.py  recording.py  sink.py
src/tratrac/infrastructure/config/: toml.py
src/tratrac/infrastructure/detection/: masking.py  rt_detr.py  yolov8_visdrone.py
src/tratrac/infrastructure/exclusion/: json.py  raster.py
src/tratrac/infrastructure/export/: composite.py  decimating.py  overlay_video.py  ssam_trj.py
src/tratrac/infrastructure/progress/: console.py
src/tratrac/infrastructure/scout/: manifest.py  runner.py
src/tratrac/infrastructure/timing/: csv.py  decorators.py
tests/integration/: test_e2e_pipeline.py  test_render.py  test_smooth_overlay.py  test_video_window.py
tests/unit/: test_anchors.py  test_cadence.py  test_calibration.py  test_cli.py  test_cli_postprocess.py  test_composite_exporter.py  test_config.py  test_decimating_exporter.py  test_ego_motion_orb.py  test_ego_motion_replay.py  test_exclusion.py  test_geometry.py  test_kalman.py  test_orientation.py  test_orientation_kalman.py  test_overlay_video.py  test_pipeline.py  test_progress.py  test_scout.py  test_ssam_trj.py  test_stabilization.py  test_timing.py  test_track_smoothing.py  test_tracks.py  test_transform.py  test_vehicle.py  test_video_window.py  test_world_calibration.py  test_world_projection.py
vault/: 00_system_overview.md  01_architecture_principles.md  02_coordinate_systems.md  03_tech_stack.md  04_ssam_format.md  05_25_mvp1_5.md  05_5_mvp1_75.md  05_75_mvp1_9.md  05_mvp1.md  06_mvp2.md  07_mvp3.md  08_mvp4.md  09_mvp5.md  10_mvp6.md  11_mvp7.md  12_final_architecture.md  13_road_topology.md  14_progress_reporting.md  15_step_timing.md  16_trj_validation.md  17_time_window.md  18_timestep_precision.md  19_config_file.md  20_video_export.md  21_exclusion_zones.md  22_smoothing.md  final_polish.md  research_high_precision_tracking.md
(+12 files in other folders)
