[project]
name = "tratrac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SantiagoGarrote", email = "santiagogarrote2005@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boxmot>=19.0.0",
    "dill>=0.4.1",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "typer>=0.25.1",
    "ultralytics>=8.4.53",
]

[project.scripts]
tratrac = "tratrac.cli:app"
tratrac-scout = "tratrac.cli_scout:app"
tratrac-smooth = "tratrac.cli_smooth:app"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # import sorting (isort)
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "TID",  # flake8-tidy-imports
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific
]
ignore = [
    "W191",  # tab indentation (we use tabs)
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG"]  # fake adapters routinely take unused arguments to satisfy a Protocol

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
	"tratrac.domain.geometry.BoundingBox",
	"tratrac.domain.geometry.Dimensions",
	"tratrac.domain.geometry.Heading",
	"tratrac.domain.geometry.Point2D",
	"tratrac.domain.geometry.Vector2D",
]

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
	"boxmot.*",
	"cv2.*",
	"huggingface_hub.*",
	"tqdm.*",
	"transformers.*",
	"ultralytics.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
	"slow: requires model downloads or real video processing; skipped by default",
]
